test/success/fibonnaci.dsk
func fib(n: int) -> int
    if n <= 1 then
        return n
    end

    return fib(n - 1) + fib(n - 2)
end

assert(fib(1) == 1)
assert(fib(2) == 1)
assert(fib(3) == 2)
assert(fib(10) == 55)
assert(fib(15) == 610)
assert(fib(20) == 6765)
