test/error/sema/param-default-type-mismatch.dsk
func f(x: int = "hello") -> void
    return
end
